try to fix the css bug on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,3 +37,9 @@ section {
   width: 0px;
   background: transparent; /* make scrollbar transparent */
 }
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
